quoting-CypressTK1/force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
	<description>Provus Product object</description>
	<label>Product</label>
	<nameField>
		<label>Product Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>Products</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>