quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/AssociatedProductId__c.field-meta.xml
<CustomField>
	<fullName>AssociatedProductId__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<description>Association between Product and Service record types</description>
	<label>Associated Product</label>
	<referenceTo>Product__c</referenceTo>
	<relationshipLabel>Associated Products</relationshipLabel>
	<relationshipName>AssociatedProducts</relationshipName>
	<type>Lookup</type>
</CustomField>