quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/Family__c.field-meta.xml
<CustomField>
	<fullName>Family__c</fullName>
	<label>Product Family</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Software</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>