quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/Group__c.field-meta.xml
<CustomField>
	<fullName>Group__c</fullName>
	<label>Group</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetName>Groups</valueSetName>
	</valueSet>
</CustomField>