quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/IsActive__c.field-meta.xml
<CustomField>
	<fullName>IsActive__c</fullName>
	<defaultValue>true</defaultValue>
	<description>Product Active</description>
	<label>Active</label>
	<type>Checkbox</type>
</CustomField>