quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/Practice__c.field-meta.xml
<CustomField>
	<fullName>Practice__c</fullName>
	<label>Practice</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetName>Practices</valueSetName>
	</valueSet>
</CustomField>