quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/ProductCode__c.field-meta.xml
<CustomField>
	<fullName>ProductCode__c</fullName>
	<label>Product Code</label>
	<length>255</length>
	<type>Text</type>
</CustomField>