quoting-CypressTK1/force-app/main/default/objects/Product__c/fields/StandardProductId__c.field-meta.xml
<CustomField>
    <fullName>StandardProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Provus Products</relationshipLabel>
    <relationshipName>ProvusProducts</relationshipName>
    <type>Lookup</type>
</CustomField>