quoting-CypressTK1/force-app/main/default/objects/Product__c/recordTypes/Ancillary.recordType-meta.xml
<RecordType>
	<fullName>Ancillary</fullName>
	<active>true</active>
	<label>Ancillary</label>
</RecordType>