quoting-CypressTK1/force-app/main/default/objects/Product__c/recordTypes/Product.recordType-meta.xml
<RecordType>
	<fullName>Product</fullName>
	<active>true</active>	
	<label>Product</label>
</RecordType>