quoting-CypressTK1/force-app/main/default/objects/Product__c/recordTypes/ResourceRole.recordType-meta.xml
<RecordType>
	<fullName>ResourceRole</fullName>
	<active>true</active>	
	<label>Resource Role</label>
</RecordType>