quoting-CypressTK1/force-app/main/default/objects/Product__c/recordTypes/Service.recordType-meta.xml
<RecordType>
	<fullName>Service</fullName>
	<active>true</active>	
	<label>Service</label>
</RecordType>